Fix widths of shows card elements at tablet breakpoint to match mockup. Add venue and location rule-sets to align all elements.

--- a/sprint-3/styles/shows.scss
+++ b/sprint-3/styles/shows.scss
@@ -178,6 +178,13 @@
                 width: 16rem;
             }
 
+            &__text-title-alt {
+                font-size: $font-size-mobile-mdparagraph;
+                line-height: $line-height-fs14px;
+                font-weight: 600;
+                margin-bottom: 2.4rem;
+            }
+
             &__text {
                 font-size: $font-size-mobile-smparagraph;
                 line-height: $line-height-fs12px;
@@ -421,38 +428,46 @@
     }
 
     .shows {
-        @include flexing(flex, column, initial, center, initial, initial);
-        padding: 4.8rem 3.125vw 4rem;
+        @include flexing(flex, column, initial, initial, initial, initial);
+        padding: 4.8rem 2.4rem 4rem;
 
 
         &__title {
-            align-self: flex-start;
             font-size: $font-size-desktop-lgheading;
             line-height: $line-height-fs36px;
             margin-bottom: 4rem;
         }
 
         &__header {
-            @include flexing(flex, initial, initial, initial, flex-start, initial);
-            width: 72rem;
-            margin-bottom: 0.2rem;
+            @include flexing(flex, initial, initial, initial, initial, initial);
+            width: 100%;
         }
 
         &__heading {
-            width: 13.6rem;
+            width: 22.4rem;
             font-size: $font-size-mobile-smparagraph;
             line-height: $line-height-fs12px;
             font-weight: 600;
             color: $color-text-label;
 
-            &--margin {
-                margin-right: 8.8rem;
+            &-alt {
+                width: 12.4rem;
+                margin-right: 2.4rem;
             }
         }
 
         .card{
-            @include flexing(flex, initial, initial, baseline, initial, initial);
-            width: 93.75vw;
+            @include flexing(flex, initial, initial, initial, initial, initial);
+            width: 100%;
+            margin: 0;
+
+            .venue {
+                height: 6.6rem;
+            }
+
+            .location {
+                height: 6.6rem;
+            }
            
             &__label {
                 display: none;
@@ -462,24 +477,19 @@
                 font-size: $font-size-desktop-lgparagraph;
                 line-height: $line-height-fs16px;
                 margin-bottom: 0rem;
-            }
-
-            &__text-title-alt {
-                font-size: $font-size-desktop-lgparagraph;
-                line-height: $line-height-fs16px;
-                margin-bottom: 0rem;
+                width: 22.4rem;
             }
 
             &__text {
                 font-size: $font-size-desktop-smparagraph;
                 line-height: $line-height-fs14px;
-                margin-bottom: 0;
+                margin-bottom: 0rem;
+                width: 12.4rem;
+                margin-right: 2.4rem;
             }
 
             .button {
-                align-self: center;
                 width: 16rem;
-                margin-top: 0;
                 margin-left: auto;
             }
         }
@@ -529,54 +539,6 @@
     }
 }
 
-@include tablet-desktop-transition(857px) {
-    .shows {
-
-        &__heading {
-            width: 18.4rem;
-
-            &--margin {
-                margin-right: 9.2rem;
-            }
-        }
-
-        &__list {
-            align-self: flex-end;
-            width: 80.4rem;
-        }
-
-        &__cards {
-            
-            .card{
-                width: 80.4rem;
-                
-                &__text-title {
-                    width: 16rem;
-                    margin-right: 10.4rem;
-                }
-
-                &__text {
-                    width: 16rem;
-                    margin: 0 1.2rem;
-                }
-                
-            }
-        }        
-    }
-}
-
-@include tablet-desktop-transition(967px) {
-
-
-    .shows {
-        @include flexing(flex, initial, initial, center, initial, space-between);
-        
-        &__list {
-            margin-top: calc(8.4rem - 0.454054054 * (100vw - 967px));
-        }        
-    }
-}
-
 @include tablet-desktop-transition(1128px) {
     .nav {
         padding: 0 calc(50% - 54rem);
@@ -605,36 +567,4 @@
             }
         }
     }
-}
-
-// Transition Queries to Smooth Tablet into Desktop Layout
-@include tablet-desktop-transition(1152px) {
-    .shows {
-        @include flexing(flex, initial, initial, center, initial, center);
-        width: 108rem;
-        padding: 4.8rem 0 4rem;
-        margin: 0 auto;
-
-        &__title {
-            width: 27.6rem;
-        }
-
-        &__list {
-            margin-top: 0;
-        }
-    }    
-}
-
-// Desktop Queries
-@include desktop {
-    .shows {
-        @include flexing(flex, initial, initial, center, initial, center);
-        padding: 4.8rem 7.8125vw 4rem;
-        width: 100%;
-        margin: 0;
-
-        &__title {
-            margin-right: auto;
-        }
-    } 
 }
